# gantry_simulation

./: Dockerfile  README.md  docker-compose.yml
gantry_ws/src/gantry_sim/: CMakeLists.txt  package.xml
gantry_ws/src/gantry_sim/launch/: gantry.launch.py
gantry_ws/src/gantry_sim/urdf/: gantry.urdf.xacro
